@@ -259,8 +259,11 @@ The commit will appear to originate from the individual who last committed the
 trove being cloned. Unlike shadowing, \fBnewclone\fP must be a full branch
 name. See the \fBExamples\fP section for more information.
 .RS 4
-.B \-\-with-sources
-Automatically clone the source for every package you are cloning.  So, for example, if you are cloning package foo from /localhost@rpl:1 to /localhost@rpl:conary, foo:source would be cloned as well if necessary.  Note that 
+.B \-\-all-flavors
+Clone all flavors for the latest versions of the specified troves.
+.B \-\-without-sources
+Do not automatically clone the source for every package you are cloning.  This 
+can be useful, for example, if the package you are cloning is a shadowed binary and the source is only available on the parent branch.
 .TP
 .B \-\-info, \-i
 Determine the packages and groups that would be created by the clone and display that information, without actually cloning.
